fixed followers and following counters for profile
